css/responsive/slim-style.css
/* ... */
/* Header */
#HeaderResponsive {
    text-align: center;
}
#HeaderImg {
    max-width:320px;
    clear:both;
    display:inline-block;
}
.ResponsiveHeaderButton {
    width: 48%;
}
#HeaderButtons {
    position: absolute;
    left: 280px;
    right: 15px;
    display:none;
}
#ButtonHolder {
    display: flex;
    flex-grow: 1;
    justify-content: flex-end;
    margin-bottom: 10px;
}
@media(max-width:1200px) {
    #Header {
        min-height: 47px;
        height: auto !important;
    }
    #HeaderButtons {
        display: block !important;
        vertical-align: top;
    }
    #HeaderNav1Click {
        margin-right: 5px;
    }
    #HeaderNav2Click {
        margin-right: 5px;
    }
    .ResponsiveNav1Username {
        display:none !important;
    }
    #Header #HeaderNav1 li {
        border:none;
    }
    #HeaderNav1 {
        display:none;
        position: static;
        margin:0;
        height: auto !important;
        float: none;
        clear: both;
        text-align: right;
    }
    #HeaderNav2 {
        display:none;
        position: static;
        margin:0;
        height: auto !important;
        float: none;
        width: 100%;
        clear: both;
        text-align: right;
        padding-left: 0;
        padding-top: 10px;
    }
    #Header .HorizontalNav ul li {
        display: inline-block;
        padding: 0 5px;
        border:0;
        float: left;
    }
    #Header .HorizontalNav ul li a, 
    .SlimHeader #Header.slimheader_darken .HorizontalNav ul li a:link,
    .SlimHeader #Header.slimheader_darken .HorizontalNav ul li a:active,
    .SlimHeader #Header.slimheader_darken .HorizontalNav ul li a:hover,
    .SlimHeader #Header.slimheader_darken .HorizontalNav ul li a:visited{
        display:inline-block;
        text-align: center;
        background: #ffffff;   
        border: 1px solid white;
        height: 45px;
        line-height: 45px;
        min-width:95px;
        padding:0 5px;
        border-radius:6px;
        margin-bottom:5px;
    }
    #Header.HeaderMenu {
        height:auto;
    }
    .HeaderMenu #HeaderImg {
        max-height:40px;
    }
    #HeaderImg {
        max-height:47px;
    }
    #Header.slimheader_darken a:link, #Header.slimheader_darken a:visited, #Header.slimheader_darken a:active {
        color: #565656;
    }
        
    #CentralSpaceContainer{
        padding-left: 0;
        }   


    #HeaderNav1 li a,
    #HeaderNav2 li a {
        color: #3a3a3a;
        opacity: 1;
        background-color: #ffffff;
    }
    
    #Header .HorizontalNav ul li.UploadButton a {
        background: #1378BF;
        box-shadow: 0 1px 3px rgba(0,0,0,0.25);
        color: #ffffff;
        border: #1378BF;        
    }

    .Question .customFieldLabel {
        max-width: 600px;
    }
}
@media(max-width:700px) {
    .headerlink {
        display:none;
    }
    .clearResponsiveBackground {
        background:none!important;
    }
}
@media(max-width:640px) {
    #HeaderButtons .rbText{
        display:none;
    }
    .ResponsiveHeaderButton {
        width: 50px;
    }
    #HeaderImg {
        max-width:200px;
        height:auto;
        max-height:47px;
    }
}
@media(max-width:515px) {
    #Header {
        padding:5px 5px;
    }
    #HeaderButtons {
        margin:0;
    }
    .ResponsiveHeaderButton {
        margin-left:5px;
    }
    #HeaderNav1 li a,
    #HeaderNav2 li a {
        width: 96vw;
        padding:0 !important;
        text-align: center;
    }
    #HeaderNav1 ul,
    #HeaderNav2 ul {
        text-align: center;
    }
    #HeaderImg {
        margin-left: 10px;
    }
}
@media(max-width:384px) {
    #HeaderImg {
        max-width: 160px;
        margin-top: 5px;
        margin-right: 250px;        
        height:auto;
    }
}
@media(min-width:1201px) {
    #HeaderNav1, #HeaderNav2 {
        display:block !important;
    }
}

/* Simple Search */
#simplesearchbuttons #Rssearchexpand {
    display:none!important;
}
#SearchBox #ssearchbox:focus {
    outline:none;
}
/* ... */

